--- a/.github/workflows/convert-links.yml
+++ b/.github/workflows/convert-links.yml
@@ -1,17 +1,47 @@
-on: [push]
+on: workflow_dispatch
 
 name: Convert Links
 
 jobs:
-  install:
-    name: Install obsidian-export
+  export:
+    name: Export Vault
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Export
+        uses: ./.github/actions/export-action
+        id: export
         with:
-          profile: minimal
-          toolchain: stable
-          override: true
-      - uses: actions-rs/cargo@v1
-      - run: cargo install obsidian-export
+          vault-location: ./Vault
+          vault-subdirectory: "/Export"
+        
+  #       actions-rs/toolchain@v1
+  #       with:
+  #         profile: minimal
+  #         toolchain: stable
+  #         override: true
+  #     - uses: actions-rs/cargo@v1
+  #     - run: cargo install obsidian-export
+
+  #     - name: Convert Wikilinks
+  #       run: |
+  #         mkdir .export
+  #         mkdir .copy
+  #         cp -r * .copy
+  #         obsidian-export 
+          
+  #         git config --global user.name 'Jimmy Briggs'
+  #         git config --global user.email 'jimbrig@users.noreply.github.com'
+  #         git checkout -b main
+  #         git pull
+
+  #         git commit -am "Automated report"
+  #         git push
+
+  # convert:
+  #   name: Convert Wikilinks
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: 
