feat: change mkdocs colors

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,8 +16,8 @@ theme:
     # Light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: pink
-      accent: indigo
+      primary: blue
+      accent: teal
       toggle:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
@@ -25,8 +25,8 @@ theme:
     # Dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: pink
-      accent: blue
+      primary: blue
+      accent: teal
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
