--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,4 @@
 
-.obsidian/workspace
-
-.obsidian/plugins/obsidian-activity-history/
-
-.obsidian/plugins/recent-files-obsidian/
-
-.vault-stats
-
-.obsidian/plugins/readwise-official/
-
-.obsidian/plugins/obsidian-commits/
-
-.obsidian/plugins/obsidian-dictionary-plugin/
-
-.obsidian/plugins/obsidian-git/
-
 .obsidian/
+.vault-stats
+desktop.files.json
