--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,12 +6,14 @@ copyright: Copyright &copy; 2022 Jimmy Briggs
 repo_url: https://github.com/jimbrig/KaaS/
 repo_name: jimbrig/KaaS
 remote_branch: gh-pages
-edit_uri: blob/main/
+edit_uri: edit/main/
 use_directory_urls: true
 docs_dir: .docs
 
 theme:
   name: 'material'
+  features:
+    - navigation.tabs
   palette:
     # Light mode
     - media: "(prefers-color-scheme: light)"
@@ -36,7 +38,24 @@ markdown_extensions:
   - footnotes
   - toc:
       permalink: true
+  - admonition
+  - codehilite:
+      linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tabbed
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_div_format
+  - pymdownx.smartsymbols
+  - meta
+  - smarty
+  - fontawesome_markdown
 
 plugins:
   - search
   - roamlinks
+  - awesome-pages
