--- a/.obsidian/.gitignore
+++ b/.obsidian/.gitignore
@@ -1,12 +1,19 @@
 *
 !.gitignore
+!themes/
+!assets/
+!snippets/
+
 !app.json
 !appearance.json
 !backlink.json
 !command-palette.json
 !core-plugins.json
 !community-plugins.json
+!graph.json
 !daily-notes.json
 !hotkeys.json
 !templates.json
-!themes/*.css
+!starred.json
+!publish.json
+
